--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>google-cloud-storage-document-files-virtual-schema</artifactId>
-    <version>1.2.2</version>
+    <version>1.3.0</version>
     <name>Virtual Schema for document data in files on Google Cloud Storage</name>
     <description>Adapter for document data access from files from Google Cloud Storage.</description>
     <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema/</url>
     <properties>
         <org.testcontainers.version>1.18.0</org.testcontainers.version>
-        <vs-common-document-files.version>7.2.1</vs-common-document-files.version>
+        <vs-common-document-files.version>7.3.0</vs-common-document-files.version>
     </properties>
     <profiles>
         <profile>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>2.22.0</version>
+            <version>2.22.1</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
@@ -61,13 +61,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.9.2</version>
+            <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.3.0</version>
+            <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -104,7 +104,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>hamcrest-resultset-matcher</artifactId>
-            <version>1.5.3</version>
+            <version>1.6.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -153,21 +153,10 @@
                 <artifactId>ossindex-maven-plugin</artifactId>
                 <configuration>
                     <excludeVulnerabilityIds>
-                        <!-- com.google.guava:guava: https://ossindex.sonatype.org/vulnerability/sonatype-2020-0926
+                        <!-- com.google.guava:guava: https://ossindex.sonatype.org/vulnerability/CVE-2020-8908 (fka. sonatype-2020-0926)
                         Excluded because we assume that the attacker does not have access to the machine. -->
-                        <exclude>sonatype-2020-0926</exclude>
-                        <!-- io.netty:netty-handler: https://ossindex.sonatype.org/vulnerability/sonatype-2020-0026
-                        Not a vulnerability in netty but how it is configured by the client software.amazon.awssdk:netty-nio-client,
-                        only used in tests. -->
-                        <exclude>sonatype-2020-0026</exclude>
-                        <!-- org.apache.hadoop:hadoop-common:jar:3.3.4 -->
-                        <!-- Rationale for exclusion: No update available, yet. -->
-                        <exclude>sonatype-2022-5732</exclude>
-                        <!-- com.fasterxml.jackson.core:jackson-core:jar:2.14.1
-                        We assume that only trusted input files are used. -->
-                        <exclude>sonatype-2022-6438</exclude>
-                        <!-- Transitive dependency fr.turri:aXMLRPC used by
-                        com.exasol:bucketfs-java.
+                        <exclude>CVE-2020-8908</exclude>
+                        <!-- Transitive dependency fr.turri:aXMLRPC used by com.exasol:bucketfs-java.
                         CVE-2020-36641 is reported to be fixed in aXMLRPC 1.12.1. We use version 1.13.0, so this is a false
                         positive. -->
                         <exclude>CVE-2020-36641</exclude>
@@ -189,7 +178,7 @@
     <parent>
         <artifactId>google-cloud-storage-document-files-virtual-schema-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.2.2</version>
+        <version>1.3.0</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
