--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>google-cloud-storage-document-files-virtual-schema</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.2</version>
     <name>Virtual Schema for document data in files on Google Cloud Storage</name>
     <description>Adapter for document data access from files from Google Cloud Storage.</description>
     <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema/</url>
     <properties>
-        <org.testcontainers.version>1.18.0</org.testcontainers.version>
-        <vs-common-document-files.version>7.3.2</vs-common-document-files.version>
+        <org.testcontainers.version>1.18.3</org.testcontainers.version>
+        <vs-common-document-files.version>7.3.3</vs-common-document-files.version>
     </properties>
     <profiles>
         <profile>
@@ -41,7 +41,13 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>2.22.1</version>
+            <version>2.23.0</version>
+        </dependency>
+        <dependency>
+            <!-- Upgrade transitive dependency of com.google.cloud:google-cloud-storage to fix CVE-2023-2976, CWE-552: Files or Directories Accessible to External Parties (7.1) -->
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.1-jre</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
@@ -66,13 +72,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.3.1</version>
+            <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.14.1</version>
+            <version>3.14.3</version>
             <scope>test</scope>
         </dependency>
         <!--Integration test dependencies-->
@@ -97,7 +103,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>udf-debugging-java</artifactId>
-            <version>0.6.8</version>
+            <version>0.6.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -109,7 +115,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-test-setup-abstraction-java</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -152,9 +158,6 @@
                 <artifactId>ossindex-maven-plugin</artifactId>
                 <configuration>
                     <excludeVulnerabilityIds>
-                        <!-- com.google.guava:guava: https://ossindex.sonatype.org/vulnerability/CVE-2020-8908 (fka. sonatype-2020-0926)
-                        Excluded because we assume that the attacker does not have access to the machine. -->
-                        <exclude>CVE-2020-8908</exclude>
                         <!-- Transitive dependency fr.turri:aXMLRPC used by com.exasol:bucketfs-java.
                         CVE-2020-36641 is reported to be fixed in aXMLRPC 1.12.1. We use version 1.13.0, so this is a false
                         positive. -->
@@ -177,7 +180,7 @@
     <parent>
         <artifactId>google-cloud-storage-document-files-virtual-schema-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.3.1</version>
+        <version>1.3.2</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
