--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,6 @@ pk_generated_parent.pom   linguist-generated=true
 .github/workflows/release_droid_upload_github_release_assets.yml    linguist-generated=true
 
 cloudSetup/.terraform.lock.hcl linguist-generated=true
+
+.settings/org.eclipse.jdt.core.prefs linguist-generated=true
+.settings/org.eclipse.jdt.ui.prefs   linguist-generated=true
