--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -6,6 +6,13 @@ sources:
       - jar_artifact
       - udf_coverage
 linkReplacements:
+build:
+build:
+  runnerOs: ubuntu-20.04
+  freeDiskSpace: false
+  exasolDbVersions:
+    - "7.1.24"
+    - "8.23.1"
 excludes:
   - "E-PK-CORE-18: Outdated content: '.github/workflows/ci-build.yml'"
   - "E-PK-CORE-18: Outdated content: '.github/workflows/release_droid_prepare_original_checksum.yml'"
