--- a/.github/workflows/ci_isolation_ci_build.yml
+++ b/.github/workflows/ci_isolation_ci_build.yml
@@ -9,13 +9,13 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: 11
+          java-version: |
+            11
+            17
           cache: "maven"
       - name: Run tests and build with Maven
         run: mvn --batch-mode --update-snapshots clean verify --file ci-isolation/pom.xml -DtrimStackTrace=false
