--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -11,7 +11,17 @@ build:
   freeDiskSpace: false
   exasolDbVersions:
     - "8.24.0"
-    - "7.1.25"
+    - "7.1.26"
+  workflows:
+    - name: ci-build.yml
+      stepCustomizations:
+        - action: INSERT_AFTER
+          stepId: enable-testcontainer-reuse
+          content:
+            name: Configure Google credentials
+            id: configure-google-credentials
+            run: echo "$GC_KEY" > google-key.json
+            env:
+              GC_KEY: ${{ secrets.GC_KEY }}
 excludes:
-  # Configure Google credentials
-  - "E-PK-CORE-18: Outdated content: '.github/workflows/ci-build.yml'"
+  - "E-PK-CORE-17: Missing required file: 'release_config.yml'"
