--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,9 @@
                         <!-- Transitive dependency org.threeten:threetenbp via com.google.cloud:google-cloud-storage.
                              We assume that google-cloud-storage uses the library correctly and does not trigger the NullPointerException. -->
                         <exclude>CVE-2024-23081</exclude>
+                        <!-- Transitive dependency org.threeten:threetenbp via com.google.cloud:google-cloud-storage.
+                             We assume that google-cloud-storage uses the library correctly and does not trigger the StringIndexOutOfBoundsException. -->
+                        <exclude>CVE-2024-23082</exclude>
                     </excludeVulnerabilityIds>
                 </configuration>
             </plugin>
