--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -10,8 +10,8 @@ build:
   runnerOs: ubuntu-20.04
   freeDiskSpace: true
   exasolDbVersions:
-    - "8.24.0"
-    - "7.1.26"
+    - "8.27.0" # 8.29.1 not yet supported by exasol-testcontainers
+    - "7.1.29"
   workflows:
     - name: ci-build.yml
       stepCustomizations:
