--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -10,7 +10,7 @@ build:
   runnerOs: ubuntu-20.04
   freeDiskSpace: true
   exasolDbVersions:
-    - "8.27.0" # 8.29.1 not yet supported by exasol-testcontainers
+    - "8.27.0" # 8.29.1 not yet supported by exasol-testcontainers, see https://github.com/exasol/exasol-testcontainers/issues/258
     - "7.1.29"
   workflows:
     - name: ci-build.yml
