--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
             <version>0.1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <!-- Enable log output for integration tests -->
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>2.0.13</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
