--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <!-- Upgrade transitive dependency of exasol-test-setup-abstraction-java to fix NullPointerException when starting DockerDB >= 8.29.1.
+                 This can be removed once https://github.com/exasol/exasol-test-setup-abstraction-java/issues/84 is fixed. -->
+            <groupId>com.exasol</groupId>
+            <artifactId>exasol-testcontainers</artifactId>
+            <version>7.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>performance-test-recorder-java</artifactId>
             <version>0.1.3</version>
