--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.aiven</groupId>
+            <artifactId>testcontainers-fake-gcs-server</artifactId>
+            <version>0.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>localstack</artifactId>
             <version>${org.testcontainers.version}</version>
