--- a/.github/workflows/ci_isolation_ci_build.yml
+++ b/.github/workflows/ci_isolation_ci_build.yml
@@ -1,11 +1,15 @@
 name: CI Isolation CI Build
 
 on:
-  - push
+  push:
+    branches: [main]
+  pull_request:
 
 jobs:
-  build:
+  ci-isolation-build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
